--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Heart of the Church - Where Faith Meets Community</title>
+    <title>Second ECWA - Where Faith Meets Community</title>
     <meta name="description" content="A welcoming church community where faith grows, hearts are healed, and lives are transformed through God's love. Join us for worship, fellowship, and service." />
     <meta name="author" content="Heart of the Church" />
 
-    <meta property="og:title" content="Heart of the Church - Where Faith Meets Community" />
+    <meta property="og:title" content="Second ECWA - Where Faith Meets Community" />
     <meta property="og:description" content="A welcoming church community where faith grows, hearts are healed, and lives are transformed through God's love. Join us for worship, fellowship, and service." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
